--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <br><br><br><br><br><br>
 <footer>
-    <h1><span class="orange-colo">Food  </span> NETWOR</h1>
+    <h1><span class="orange-colo">Food  </span> NETWORk</h1>
     <p>Eat healthy to live healthy. Live healthy to live happy.</p>
 
     
